deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-js-sample
  template:
    metadata:
      labels:
        app: node-js-sample
    spec:
      containers:
      - name: node-js-sample
        image: node:14-alpine
        ports:
        - containerPort: 30007
        volumeMounts:
        - mountPath: /usr/src/app/data
          name: node-js-storage
      volumes:
      - name: node-js-storage
        persistentVolumeClaim:
          claimName: node-js-pvc
        
---
apiVersion: v1
kind: Service
metadata:
  name: node-js-sample-service
spec:
  selector:
    app: node-js-sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30007
      nodePort: 30007
  type: LoadBalancer
