network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-to-node-js
spec: 
  podSelector:
    matchLabels:
      app: node-js
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          accees: allowed
